# geometrix

./: .gitignore  .gitmodules  CMakeLists.txt  Jamroot  License.md  README.md  geometrix.natvis  geometrix.sln  geometrix.vcxproj  geometrix.vcxproj.filters  geometry.sln  lazy_exact_arithmetic.hpp  wave.cfg
doc/: DoxygenLayout.xml  Jamfile.v2  acknowledgements.qbk  bgal.qbk  changelog.qbk  concepts.qbk  doxyfile  doxygen.css  footer.html  geometrix.qbk  header.html  introduction.qbk  mainpage.hpp  notes.qbk  organization.qbk  preface.qbk  quick_start.qbk  references.qbk
documentation/: documentation.vcproj  documentation.vcxproj  documentation.vcxproj.filters
geometrix/: geometric_traits.hpp  geometrix.vcxproj  geometrix.vcxproj.filters  tags.hpp  version.hpp
geometrix/algebra/: algebra.hpp  binary_functions.hpp  cross_product.hpp  dot_product.hpp  expression.hpp  expression_generator.hpp  exterior_product.hpp  grammar.hpp  lup_decomposition.hpp  terminals.hpp  type_traits.hpp  unary_functions.hpp  vector_projection.hpp
geometrix/algorithm/: bentley_ottmann_segment_intersection.hpp  bentley_ottmann_sweep.hpp  bounding_box_intersection.hpp  bresenham_grid_traversal.hpp  bsp_tree_2d.hpp  bsp_tree_2d_fwd.hpp  classify_simplex_to_plane.hpp  cohen_sutherland_line_clipping.hpp  convex_hull_divide_and_conquer.hpp  convex_hull_graham.hpp  doubly_connected_edge_list.hpp  eberly_triangle_aabb_intersection.hpp  euclidean_distance.hpp  fast_voxel_grid_traversal.hpp  floodfill_grid_traversal.hpp  glu_mesh_factory.hpp  glu_mesh_factory.ipp  grid_2d.hpp  grid_traits.hpp  hash_grid_2d.hpp  hyperplane_partition_policies.hpp  is_segment_in_range.hpp  kd_tree.hpp  line_intersection.hpp  linear_components_intersection.hpp  median_partitioning_strategy.hpp  mesh_2d.hpp  mesh_search.hpp  node_bsp_tree_2d.hpp  node_bsp_tree_2d_fwd.hpp  orientation.hpp  orientation_enum.hpp  orientation_grid_traversal.hpp  point_in_circumcircle.hpp  point_in_polygon.hpp  point_in_solid_classification.hpp  point_location_classification.hpp  polygon_with_holes_as_segment_range.hpp  rotation.hpp  segment_intersection.hpp  (+7 more)
geometrix/arithmetic/: arithmetic.hpp  arithmetic_promotion_policy.hpp  boost_units_arithmetic.hpp  cmath.hpp  math_function_traits.hpp  math_kernel.hpp  matrix_arithmetic.hpp  scalar_arithmetic.hpp  tensor_arithmetic.hpp  tensor_function.hpp  vector.hpp  vector_arithmetic.hpp
geometrix/numeric/: boost_math_numerics.hpp  boost_units_quantity.hpp  boost_units_quantity_fixed_point.hpp  constants.hpp  fixed_point.hpp  fixed_point_traits.hpp  function_traits.hpp  integral_constant_pi_calculator.hpp  interval.hpp  number_comparison_policy.hpp  numeric_traits.hpp  rational_utilities.hpp  value_accessor.hpp
geometrix/primitive/: array_point_sequence.hpp  axis_aligned_bounding_box.hpp  capsule.hpp  capsule_traits.hpp  deque_point_sequence.hpp  hyperplane_traits.hpp  line.hpp  line_traits.hpp  oriented_bounding_box.hpp  plane.hpp  plane_traits.hpp  point.hpp  point_forward.hpp  point_sequence.hpp  point_sequence_traits.hpp  point_sequence_utilities.hpp  point_traits.hpp  polygon.hpp  polygon_with_holes.hpp  polyline.hpp  quadrilateral.hpp  ray.hpp  ray_traits.hpp  rectangle.hpp  segment.hpp  segment_traits.hpp  small_polygon.hpp  small_polyline.hpp  sphere.hpp  sphere_traits.hpp  triangle.hpp  vector_point_sequence.hpp
geometrix/space/: affine_space.hpp  affine_space_traits.hpp  cartesian_access_traits.hpp  cartesian_polar_transformation.hpp  cartesian_reference_frame.hpp  coordinate_basis.hpp  coordinate_basis_traits.hpp  coordinate_sequence.hpp  coordinate_traits.hpp  dimension.hpp  neutral_reference_frame.hpp  polar_access_traits.hpp  polar_cartesian_transformation.hpp  polar_reference_frame.hpp  reference_frame_adaptor.hpp  (+2 more)
geometry/: affine_space.hpp  affine_space_traits.hpp  bentley_ottmann_segment_intersection.hpp  bentley_ottmann_sweep.hpp  boolean_operations_bsp_2d.hpp  bounding_box_intersection.hpp  bsp_tree_2d.hpp  cartesian_access_traits.hpp  cartesian_point_access_traits.hpp  cartesian_polar_transformation.hpp  cartesian_reference_frame.hpp  constants.hpp  construction_traits.hpp  convex_hull_divide_and_conquer.hpp  convex_hull_graham.hpp  coordinate_sequence_traits.hpp  coordinate_traits.hpp  dimension_traits.hpp  doubly_connected_edge_list.hpp  euclidean_distance.hpp  floodfill_grid_traversal.hpp  geometric_concepts.hpp  geometry.vcproj  grid_traits.hpp  indexed_access_traits.hpp  indexed_sequence_operators.hpp  indexed_sequence_traversal.hpp  kd_tree.hpp  line.hpp  line_intersection.hpp  line_traits.hpp  linear_components_intersection.hpp  math_functions.hpp  median_partitioning_strategy.hpp  neutral_reference_frame.hpp  number_comparison_policy.hpp  numeric_sequence.hpp  numeric_sequence_compare.hpp  numeric_sequence_traits.hpp  numeric_traits.hpp  (+25 more)
geometry_test/: 2d_kernel_fixture.hpp  2d_kernel_units_fixture.hpp  3d_kernel_fixture.hpp  3d_kernel_units_fixture.hpp  CMakeLists.txt  Jamfile.v2  aabb_intersection_tests.cpp  aabb_intersection_tests.hpp  access_time_tests.hpp  as_tests.cpp  as_tests.hpp  boolean_operation_bsp_test.hpp  bsp_test.cpp  bsp_test.hpp  capsule_tests.cpp  capsule_tests.hpp  compose_matrix_test.hpp  constant_tests.hpp  convex_hull_test.hpp  derivative.cpp  derivative.hpp  distance_tests.cpp  distance_tests.hpp  eberly_triangle_aabb_intersection_tests.cpp  eberly_triangle_aabb_intersection_tests.hpp  floating_point_comparison_tests.hpp  geometrix_test.hpp  geometry_test.cpp  geometry_test.vcproj  geometry_test.vcxproj  geometry_test.vcxproj.filters  google_test_fixture.hpp  grid_tests.cpp  grid_tests.hpp  gtest_intersection_tests.cpp  homogeneous_coordinates_tests.cpp  homogeneous_coordinates_tests.hpp  indexed_sequence_tests.hpp  intersection_tests.cpp  intersection_tests.hpp  (+57 more)
lazy_exact/: lazy_exact.hpp  lazy_exact_addition_operation.hpp  lazy_exact_base.hpp  lazy_exact_base_arithmetic.hpp  lazy_exact_binary_functors.hpp  lazy_exact_binary_operation.hpp  lazy_exact_number.hpp  lazy_exact_unary_functors.hpp  lazy_exact_unary_operation.hpp
(+270 files in other folders)
